fix: loging, pages not working
